@@ -1,3 +1,8 @@
+2004-09-30  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR 414
+	* elflink.c (_bfd_elf_merge_symbol): Check TLS symbol.
+
 2004-09-30  Paul Brook  <paul@codesourcery.com>
 
 	* reloc.c: Add BFD_RELOC_ARM_SMI.
